add some custom sytling

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title></title>
+    <title>Ecommerce</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="" />
+    <link rel="style" href="" />
   </head>
   <body>
     <!--[if lt IE 7]>
@@ -20,6 +20,6 @@
       </p>
     <![endif]-->
 
-    <script src="" async defer></script>
+    <script src="script.js" async defer></script>
   </body>
 </html>
