add live server

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <title>Ecommerce</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="style" href="" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!--[if lt IE 7]>
-      <p class="browsehappy">
-        You are using an <strong>outdated</strong> browser. Please
-        <a href="#">upgrade your browser</a> to improve your experience.
-      </p>
-    <![endif]-->
+    <h1>Example h1</h1>
+    <h2>Example h1</h2>
+    <h3>Example h1</h3>
+    <h4>Example h1</h4>
+    <h5>Example h1</h5>
+    <h6>Example h1</h6>
 
     <script src="script.js" async defer></script>
   </body>
