--- a/index.html
+++ b/index.html
@@ -11,14 +11,38 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+    />
   </head>
   <body>
-    <h1>Example h1</h1>
-    <h2>Example h1</h2>
-    <h3>Example h1</h3>
-    <h4>Example h1</h4>
-    <h5>Example h1</h5>
-    <h6>Example h1</h6>
+    <section id="header">
+      <a href="#"><img src="img/logo.png" class="logo" alt="logo image" /></a>
+
+      <div>
+        <ul id="navbar">
+          <li>
+            <a href="index.html">Home</a>
+          </li>
+          <li>
+            <a href="shop.html">Shop</a>
+          </li>
+          <li>
+            <a href="blog.html">Blog</a>
+          </li>
+          <li>
+            <a href="about.html">About</a>
+          </li>
+          <li>
+            <a href="contact.html">Contact us</a>
+          </li>
+          <li>
+            <a href="cart.html"><i class="far fa-shopping-bag"></i></a>
+          </li>
+        </ul>
+      </div>
+    </section>
 
     <script src="script.js" async defer></script>
   </body>
