--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div>
         <ul id="navbar">
           <li>
-            <a href="index.html">Home</a>
+            <a class="active" href="index.html">Home</a>
           </li>
           <li>
             <a href="shop.html">Shop</a>
@@ -42,6 +42,14 @@
           </li>
         </ul>
       </div>
+    </section>
+
+    <section id="hero">
+      <h4>Trade-in-offer</h4>
+      <h2>Super value deals</h2>
+      <h1>On all products</h1>
+      <p>Save more with coupons & up to 70% off!</p>
+      <button>Shop Now</button>
     </section>
 
     <script src="script.js" async defer></script>
