--- a/index.html
+++ b/index.html
@@ -390,6 +390,23 @@
       </div>
     </section>
 
+    <section id="banner3">
+      <div class="banner-box">
+        <h2>SEASONAL SALE</h2>
+        <h3>Winter Collection -50% OFF</h3>
+      </div>
+
+      <div class="banner-box banner-box2">
+        <h2>NEW FOOTWEAR COLLECTION</h2>
+        <h3>Sprint / Summer 2022</h3>
+      </div>
+
+      <div class="banner-box banner-box3">
+        <h2>T-SHIRTS</h2>
+        <h3>New Trendy Prints</h3>
+      </div>
+    </section>
+
     <script src="script.js" async defer></script>
   </body>
 </html>
