--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
           </li>
         </ul>
       </div>
+      <div id="mobile">
+        <a href="cart.html"><i class="far fa-shopping-bag"></i></a>
+        <i id="bar" class="fas fa-outdent"></i>
+      </div>
     </section>
 
     <section id="hero">
