--- a/index.html
+++ b/index.html
@@ -38,8 +38,11 @@
             <a href="contact.html">Contact us</a>
           </li>
           <li>
-            <a href="cart.html"><i class="far fa-shopping-bag"></i></a>
+            <a href="cart.html" id="lg-bag"
+              ><i class="far fa-shopping-bag"></i
+            ></a>
           </li>
+          <a href="#" id="close"><i class="far fa-times"></i></a>
         </ul>
       </div>
       <div id="mobile">
