add page header for shop

--- a/shop.html
+++ b/shop.html
@@ -23,10 +23,10 @@
       <div>
         <ul id="navbar">
           <li>
-            <a class="active" href="index.html">Home</a>
+            <a href="index.html">Home</a>
           </li>
           <li>
-            <a href="shop.html">Shop</a>
+            <a class="active" href="shop.html">Shop</a>
           </li>
           <li>
             <a href="blog.html">Blog</a>
@@ -51,12 +51,10 @@
       </div>
     </section>
 
-    <section id="hero">
-      <h4>Trade-in-offer</h4>
-      <h2>Super value deals</h2>
-      <h1>On all products</h1>
+    <section id="page-header">
+      <h2>#stayhome</h2>
+
       <p>Save more with coupons & up to 70% off!</p>
-      <button>Shop Now</button>
     </section>
 
     <section id="product1" class="section-p1">
