--- a/index.html
+++ b/index.html
@@ -22,21 +22,11 @@
 
       <div>
         <ul id="navbar">
-          <li>
-            <a class="active" href="index.html">Home</a>
-          </li>
-          <li>
-            <a href="shop.html">Shop</a>
-          </li>
-          <li>
-            <a href="blog.html">Blog</a>
-          </li>
-          <li>
-            <a href="about.html">About</a>
-          </li>
-          <li>
-            <a href="contact.html">Contact us</a>
-          </li>
+          <li><a class="active" href="index.html">Home</a></li>
+          <li><a href="shop.html">Shop</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact us</a></li>
           <li>
             <a href="cart.html" id="lg-bag"
               ><i class="far fa-shopping-bag"></i
