--- a/blog.html
+++ b/blog.html
@@ -51,13 +51,27 @@
       </div>
     </section>
 
-    <section id="page-header">
-      <h2>#stayhome</h2>
-
-      <p>Save more with coupons & up to 70% off!</p>
+    <section id="page-header" class="blog-header">
+      <h2>#readmore</h2>
+      <p>Read all case studies about our products!</p>
     </section>
 
-    <section></section>
+    <section id="blog">
+      <div class="blog-box">
+        <div class="blog-img">
+          <img src="img/blog/b1.jpg" alt="" />
+        </div>
+        <div class="blog-details">
+          <h4>The Cotton-Jersey Zip-Up Hoodie</h4>
+          <p>
+            Kickstarter man braid godard coloring book. Raclette waistcoat
+            selfies yrwolf charteruse hexagon irony, godard..
+          </p>
+          <a href="#">CONTINUE READING</a>
+        </div>
+        <h1>13/01</h1>
+      </div>
+    </section>
 
     <section id="pagination" class="section-p1">
       <a href="#">1</a>
