add all the blogs

--- a/blog.html
+++ b/blog.html
@@ -74,52 +74,52 @@
 
       <div class="blog-box">
         <div class="blog-img">
-          <img src="img/blog/b1.jpg" alt="" />
+          <img src="img/blog/b2.jpg" alt="" />
         </div>
         <div class="blog-details">
-          <h4>The Cotton-Jersey Zip-Up Hoodie</h4>
+          <h4>How to Style a Quiff</h4>
           <p>
             Kickstarter man braid godard coloring book. Raclette waistcoat
             selfies yrwolf charteruse hexagon irony, godard..
           </p>
           <a href="#">CONTINUE READING</a>
         </div>
-        <h1>13/01</h1>
+        <h1>10/05</h1>
       </div>
 
       <div class="blog-box">
         <div class="blog-img">
-          <img src="img/blog/b1.jpg" alt="" />
+          <img src="img/blog/b3.jpg" alt="" />
         </div>
         <div class="blog-details">
-          <h4>The Cotton-Jersey Zip-Up Hoodie</h4>
+          <h4>Must-Have Skater Girl Items</h4>
           <p>
             Kickstarter man braid godard coloring book. Raclette waistcoat
             selfies yrwolf charteruse hexagon irony, godard..
           </p>
           <a href="#">CONTINUE READING</a>
         </div>
-        <h1>13/01</h1>
+        <h1>13/05</h1>
       </div>
 
       <div class="blog-box">
         <div class="blog-img">
-          <img src="img/blog/b1.jpg" alt="" />
+          <img src="img/blog/b4.jpg" alt="" />
         </div>
         <div class="blog-details">
-          <h4>The Cotton-Jersey Zip-Up Hoodie</h4>
+          <h4>Runway-Inspired Trends</h4>
           <p>
             Kickstarter man braid godard coloring book. Raclette waistcoat
             selfies yrwolf charteruse hexagon irony, godard..
           </p>
           <a href="#">CONTINUE READING</a>
         </div>
-        <h1>13/01</h1>
+        <h1>17/05</h1>
       </div>
 
       <div class="blog-box">
         <div class="blog-img">
-          <img src="img/blog/b1.jpg" alt="" />
+          <img src="img/blog/b7.jpg" alt="" />
         </div>
         <div class="blog-details">
           <h4>The Cotton-Jersey Zip-Up Hoodie</h4>
@@ -129,7 +129,7 @@
           </p>
           <a href="#">CONTINUE READING</a>
         </div>
-        <h1>13/01</h1>
+        <h1>01/06</h1>
       </div>
     </section>
 
