--- a/about.html
+++ b/about.html
@@ -51,105 +51,24 @@
       </div>
     </section>
 
-    <section id="page-header" class="blog-header">
-      <h2>#readmore</h2>
+    <section id="page-header" class="about-header">
+      <h2>#KnowUs</h2>
       <p>Read all case studies about our products!</p>
     </section>
 
-    <section id="blog">
-      <div class="blog-box">
-        <div class="blog-img">
-          <img src="img/blog/b1.jpg" alt="" />
-        </div>
-        <div class="blog-details">
-          <h4>The Cotton-Jersey Zip-Up Hoodie</h4>
-          <p>
-            Kickstarter man braid godard coloring book. Raclette waistcoat
-            selfies yrwolf charteruse hexagon irony, godard..
-          </p>
-          <a href="#">CONTINUE READING</a>
-        </div>
-        <h1>13/01</h1>
-      </div>
-
-      <div class="blog-box">
-        <div class="blog-img">
-          <img src="img/blog/b2.jpg" alt="" />
-        </div>
-        <div class="blog-details">
-          <h4>How to Style a Quiff</h4>
-          <p>
-            Kickstarter man braid godard coloring book. Raclette waistcoat
-            selfies yrwolf charteruse hexagon irony, godard..
-          </p>
-          <a href="#">CONTINUE READING</a>
-        </div>
-        <h1>10/05</h1>
-      </div>
-
-      <div class="blog-box">
-        <div class="blog-img">
-          <img src="img/blog/b3.jpg" alt="" />
-        </div>
-        <div class="blog-details">
-          <h4>Must-Have Skater Girl Items</h4>
-          <p>
-            Kickstarter man braid godard coloring book. Raclette waistcoat
-            selfies yrwolf charteruse hexagon irony, godard..
-          </p>
-          <a href="#">CONTINUE READING</a>
-        </div>
-        <h1>13/05</h1>
-      </div>
-
-      <div class="blog-box">
-        <div class="blog-img">
-          <img src="img/blog/b4.jpg" alt="" />
-        </div>
-        <div class="blog-details">
-          <h4>Runway-Inspired Trends</h4>
-          <p>
-            Kickstarter man braid godard coloring book. Raclette waistcoat
-            selfies yrwolf charteruse hexagon irony, godard..
-          </p>
-          <a href="#">CONTINUE READING</a>
-        </div>
-        <h1>17/05</h1>
-      </div>
-
-      <div class="blog-box">
-        <div class="blog-img">
-          <img src="img/blog/b7.jpg" alt="" />
-        </div>
-        <div class="blog-details">
-          <h4>The Cotton-Jersey Zip-Up Hoodie</h4>
-          <p>
-            Kickstarter man braid godard coloring book. Raclette waistcoat
-            selfies yrwolf charteruse hexagon irony, godard..
-          </p>
-          <a href="#">CONTINUE READING</a>
-        </div>
-        <h1>01/06</h1>
-      </div>
-    </section>
-
-    <section id="pagination" class="section-p1">
-      <a href="#">1</a>
-      <a href="#">2</a>
-      <a href="#"><i class="fal fa-long-arrow-alt-right"></i></a>
-    </section>
-
-    <section id="newsletter" class="section-p1 section-m1">
-      <div class="newstext">
-        <h4>Sign Up For Newsletters</h4>
+    <section id="about-head" class="section-p1">
+      <img src="img/about/a6.jpg" alt="" />
+      <div>
+        <h2>Who We Are?</h2>
         <p>
-          Get E-mail updates about our latest shop and
-          <span>special offers.</span>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+          culpa qui officia deserunt mollit anim id est laborum.
         </p>
-      </div>
-      <div class="form">
-        <input type="text" placeholder="Your email address" />
-        <button class="normal">Sign Up</button>
       </div>
     </section>
 
