--- a/about.html
+++ b/about.html
@@ -68,8 +68,20 @@
           reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
           pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
           culpa qui officia deserunt mollit anim id est laborum.
+          <abbr title=""
+            >Create stunning images with as much or as littel control as you
+            like thanks to choice of Basic and Creative modes.</abbr
+          ><br /><br />
+          <marquee bgcolor="#ccc" loop="-1" scrollamount="5" width="100%"
+            >Create stunning images with as much or as littel control as you
+            like thanks to choice of Basic and Creative modes</marquee
+          >
         </p>
       </div>
+    </section>
+
+    <section id="about-app" class="section-p1">
+      <h1>Download Our <a href="#">App</a></h1>
     </section>
 
     <footer class="section-p1">
