--- a/about.html
+++ b/about.html
@@ -82,6 +82,9 @@
 
     <section id="about-app" class="section-p1">
       <h1>Download Our <a href="#">App</a></h1>
+      <div class="video">
+        <video autoplay muted loop src="img/about/1.mp4"></video>
+      </div>
     </section>
 
     <footer class="section-p1">
