--- a/contact.html
+++ b/contact.html
@@ -56,6 +56,43 @@
       <p>LEAVE A MESSAGE, We love to hear from you!</p>
     </section>
 
+    <section id="contact-details" class="section-p1">
+      <div class="details">
+        <span>GET IN TOUCH</span>
+        <h2>Visit one of our agency location or contact us today</h2>
+        <h3>Head Office</h3>
+        <div>
+          <li>
+            <i class="fal fa-map"></i>
+            <p>60 Street Dora Baghdad</p>
+          </li>
+          <li>
+            <i class="far fa-envelope"></i>
+            <p>contact@gmail.com</p>
+          </li>
+          <li>
+            <i class="fas fa-phone-alt"></i>
+            <p>contact@gmail.com</p>
+          </li>
+          <li>
+            <i class="far fa-clock"></i>
+            <p>Sunday to Saturday: 9.00am to 12.00am</p>
+          </li>
+        </div>
+      </div>
+      <div class="map">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3337.0216784473937!2d44.39164267640842!3d33.23973547347367!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1559d52d861b7e03%3A0xc18af125d30d6332!2s60%20Street%2C%20Baghdad%2C%20Baghdad%20Governorate!5e0!3m2!1sen!2siq!4v1717543882509!5m2!1sen!2siq"
+          width="600"
+          height="450"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
+      </div>
+    </section>
+
     <section id="newsletter" class="section-p1 section-m1">
       <div class="newstext">
         <h4>Sign Up For Newsletters</h4>
