--- a/contact.html
+++ b/contact.html
@@ -121,7 +121,7 @@
           rows="10"
           placeholder="Your Message"
         ></textarea>
-        <button>Submit</button>
+        <button class="normal">Submit</button>
       </form>
     </section>
 
