--- a/contact.html
+++ b/contact.html
@@ -123,6 +123,32 @@
         ></textarea>
         <button class="normal">Submit</button>
       </form>
+
+      <div class="people">
+        <div>
+          <img src="img/people/1.png" alt="" />
+          <p>
+            <span>John Doe</span> Senior Marketing Manager <br />
+            Phone: 882888382 <br />Email: contact@example.com
+          </p>
+        </div>
+
+        <div>
+          <img src="img/people/2.png" alt="" />
+          <p>
+            <span>William Smith</span> Senior Marketing Manager <br />
+            Phone: 882888382 <br />Email: contact@example.com
+          </p>
+        </div>
+
+        <div>
+          <img src="img/people/3.png" alt="" />
+          <p>
+            <span>Emma Stone</span> Senior Marketing Manager <br />
+            Phone: 882888382 <br />Email: contact@example.com
+          </p>
+        </div>
+      </div>
     </section>
 
     <footer class="section-p1">
