--- a/cart.html
+++ b/cart.html
@@ -35,10 +35,10 @@
             <a href="about.html">About</a>
           </li>
           <li>
-            <a class="active" href="contact.html">Contact us</a>
+            <a href="contact.html">Contact us</a>
           </li>
           <li>
-            <a href="cart.html" id="lg-bag"
+            <a class="active" href="cart.html" id="lg-bag"
               ><i class="far fa-shopping-bag"></i
             ></a>
           </li>
@@ -56,98 +56,93 @@
       <p>LEAVE A MESSAGE, We love to hear from you!</p>
     </section>
 
-    <section id="contact-details" class="section-p1">
-      <div class="details">
-        <span>GET IN TOUCH</span>
-        <h2>Visit one of our agency location or contact us today</h2>
-        <h3>Head Office</h3>
-        <div>
-          <li>
-            <i class="fal fa-map"></i>
-            <p>60 Street Dora Baghdad</p>
-          </li>
-          <li>
-            <i class="far fa-envelope"></i>
-            <p>contact@gmail.com</p>
-          </li>
-          <li>
-            <i class="fas fa-phone-alt"></i>
-            <p>contact@gmail.com</p>
-          </li>
-          <li>
-            <i class="far fa-clock"></i>
-            <p>Sunday to Saturday: 9.00am to 12.00am</p>
-          </li>
-        </div>
-      </div>
-      <div class="map">
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3337.0216784473937!2d44.39164267640842!3d33.23973547347367!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1559d52d861b7e03%3A0xc18af125d30d6332!2s60%20Street%2C%20Baghdad%2C%20Baghdad%20Governorate!5e0!3m2!1sen!2siq!4v1717543882509!5m2!1sen!2siq"
-          width="600"
-          height="450"
-          style="border: 0"
-          allowfullscreen=""
-          loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"
-        ></iframe>
-      </div>
+    <section id="cart" class="section-p1">
+      <table width="100%">
+        <thead>
+          <tr>
+            <td>Remove</td>
+            <td>Image</td>
+            <td>Product</td>
+            <td>Price</td>
+            <td>Quantity</td>
+            <td>Subtotal</td>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>
+              <a href="#"><i class="far fa-times-circle"></i></a>
+            </td>
+            <td><img src="img/products/f1.jpg" alt="shirt-img" /></td>
+            <td>Cartoon Astronaut T-Shirts</td>
+            <td>$118.19</td>
+            <td><input type="number" value="1" /></td>
+            <td>$118.19</td>
+          </tr>
+
+          <tr>
+            <td>
+              <a href="#"><i class="far fa-times-circle"></i></a>
+            </td>
+            <td><img src="img/products/f2.jpg" alt="shirt-img" /></td>
+            <td>Cartoon Astronaut T-Shirts</td>
+            <td>$118.19</td>
+            <td><input type="number" value="1" /></td>
+            <td>$118.19</td>
+          </tr>
+
+          <tr>
+            <td>
+              <a href="#"><i class="far fa-times-circle"></i></a>
+            </td>
+            <td><img src="img/products/f3.jpg" alt="shirt-img" /></td>
+            <td>Cartoon Astronaut T-Shirts</td>
+            <td>$118.19</td>
+            <td><input type="number" value="1" /></td>
+            <td>$118.19</td>
+          </tr>
+
+          <tr>
+            <td>
+              <a href="#"><i class="far fa-times-circle"></i></a>
+            </td>
+            <td><img src="img/products/f4.jpg" alt="shirt-img" /></td>
+            <td>Cartoon Astronaut T-Shirts</td>
+            <td>$118.19</td>
+            <td><input type="number" value="1" /></td>
+            <td>$118.19</td>
+          </tr>
+        </tbody>
+      </table>
     </section>
 
-    <section id="newsletter" class="section-p1 section-m1">
-      <div class="newstext">
-        <h4>Sign Up For Newsletters</h4>
-        <p>
-          Get E-mail updates about our latest shop and
-          <span>special offers.</span>
-        </p>
+    <section id="cart-add" class="section-p1">
+      <div id="coupon">
+        <h3>Apply Coupon</h3>
+        <div>
+          <input type="text" placeholder="Enter Your Coupon" />
+          <button class="normal">Apply Coupon</button>
+        </div>
       </div>
-      <div class="form">
-        <input type="text" placeholder="Your email address" />
-        <button class="normal">Sign Up</button>
-      </div>
-    </section>
 
-    <section id="form-details">
-      <form action="">
-        <span>LEAVE A MESSAGE</span>
-        <h2>We love to hear from you</h2>
-        <input type="text" placeholder="Your Name" />
-        <input type="text" placeholder="Email" />
-        <input type="text" placeholder="Subject" />
-        <textarea
-          name=""
-          id=""
-          cols="30"
-          rows="10"
-          placeholder="Your Message"
-        ></textarea>
-        <button class="normal">Submit</button>
-      </form>
+      <div id="subtotal">
+        <h3>Cart Total</h3>
+        <table>
+          <tr>
+            <td>Cart Subtotal</td>
+            <td>$ 335</td>
+          </tr>
 
-      <div class="people">
-        <div>
-          <img src="img/people/1.png" alt="" />
-          <p>
-            <span>John Doe</span> Senior Marketing Manager <br />
-            Phone: 882888382 <br />Email: contact@example.com
-          </p>
-        </div>
+          <tr>
+            <td>Shipping</td>
+            <td>Free</td>
+          </tr>
 
-        <div>
-          <img src="img/people/2.png" alt="" />
-          <p>
-            <span>William Smith</span> Senior Marketing Manager <br />
-            Phone: 882888382 <br />Email: contact@example.com
-          </p>
-        </div>
-
-        <div>
-          <img src="img/people/3.png" alt="" />
-          <p>
-            <span>Emma Stone</span> Senior Marketing Manager <br />
-            Phone: 882888382 <br />Email: contact@example.com
-          </p>
-        </div>
+          <tr>
+            <td><strong>Total</strong></td>
+            <td><strong>335$</strong></td>
+          </tr>
+        </table>
       </div>
     </section>
 
