finish computer version

--- a/cart.html
+++ b/cart.html
@@ -121,7 +121,7 @@
         <h3>Apply Coupon</h3>
         <div>
           <input type="text" placeholder="Enter Your Coupon" />
-          <button class="normal">Apply Coupon</button>
+          <button class="normal">Apply</button>
         </div>
       </div>
 
@@ -143,6 +143,7 @@
             <td><strong>335$</strong></td>
           </tr>
         </table>
+        <button class="normal">Proceed to checkout</button>
       </div>
     </section>
 
